tests/build/cases/ui_node/invalid_delegate_list_pair.stderr
error: expected `, delegate_list_mut = <expr>`
 --> cases/ui_node/invalid_delegate_list_pair.rs:9:33
  |
9 | #[ui_node(delegate_list = &self.inner)]
  |                                 ^^^^^

error: expected `, delegate_list = <expr>`
  --> cases/ui_node/invalid_delegate_list_pair.rs:15:41
   |
15 | #[ui_node(delegate_list_mut = &mut self.inner)]
   |                                         ^^^^^

warning: unused imports: `UiNodeList`, `UiNode`
 --> cases/ui_node/invalid_delegate_list_pair.rs:3:23
  |
3 |     widget_instance::{UiNode, UiNodeList},
  |                       ^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
